Wrote Junit Tests for Blob
all tests pass